Package_Tools/include-C/graphite2/Font.pp


function gr_make_face_with_ops(appFaceHandle:pointer; face_ops:Pgr_face_ops; faceOptions:dword):Pgr_face;cdecl;external;
{* @deprecated Since v1.2.0 in favour of gr_make_face_with_ops.
  * Create a gr_face object given application information and a getTable function.
  *
  * @return gr_face or NULL if the font fails to load for some reason.
  * @param appFaceHandle This is application specific information that is passed
  *                      to the getTable function. The appFaceHandle must stay
  *                      alive as long as the gr_face is alive.
  * @param getTable      Callback function to get table data.
  * @param faceOptions   Bitfield describing various options. See enum gr_face_options for details.
   }
{GR2_DEPRECATED_API }(* Const before type ignored *)
{non-NULL }function gr_make_face(appFaceHandle:pointer; getTable:Tgr_get_table_fn; faceOptions:dword):Pgr_face;cdecl;external;
{* @deprecated   Since 1.3.7 this function is now an alias for gr_make_face_with_ops().
  *
  * Create a gr_face object given application information, with subsegmental caching support
  *
  * @return gr_face or NULL if the font fails to load.
  * @param appFaceHandle is a pointer to application specific information that is passed to getTable.
  *                      This may not be NULL and must stay alive as long as the gr_face is alive.
  * @param face_ops      Pointer to face specific callback structure for table management. Must stay
  *                      alive for the duration of the call only.
  * @param segCacheMaxSize Unused.
  * @param faceOptions   Bitfield of values from enum gr_face_options
   }
{GR2_DEPRECATED_API }(* Const before type ignored *)
(* Const before type ignored *)
function gr_make_face_with_seg_cache_and_ops(appFaceHandle:pointer; face_ops:Pgr_face_ops; segCacheMaxSize:dword; faceOptions:dword):Pgr_face;cdecl;external;
{* @deprecated   Since 1.3.7 this function is now an alias for gr_make_face().
  *
  * Create a gr_face object given application information, with subsegmental caching support.
  * This function is deprecated as of v1.2.0 in favour of gr_make_face_with_seg_cache_and_ops.
  *
  * @return gr_face or NULL if the font fails to load.
  * @param appFaceHandle is a pointer to application specific information that is passed to getTable.
  *                      This may not be NULL and must stay alive as long as the gr_face is alive.
  * @param getTable      The function graphite calls to access font table data
  * @param segCacheMaxSize   How large the segment cache is.
  * @param faceOptions   Bitfield of values from enum gr_face_options
   }
{GR2_DEPRECATED_API }(* Const before type ignored *)
function gr_make_face_with_seg_cache(appFaceHandle:pointer; getTable:Tgr_get_table_fn; segCacheMaxSize:dword; faceOptions:dword):Pgr_face;cdecl;external;
{* Convert a tag in a string into a gr_uint32
  *
  * @return gr_uint32 tag, zero padded
  * @param str a nul terminated string of which at most the first 4 characters are read
   }
(* Const before type ignored *)
function gr_str_to_tag(str:Pchar):Tgr_uint32;cdecl;external;
{* Convert a gr_uint32 tag into a string
  *
  * @param tag contains the tag to convert
  * @param str is a pointer to a char array of at least size 4 bytes. The first 4 bytes of this array
  *            will be overwritten by this function. No nul is appended.
   }
procedure gr_tag_to_str(tag:Tgr_uint32; str:Pchar);cdecl;external;
{* Get feature values for a given language or default
  *
  * @return a copy of the default feature values for a given language. The application must call
  *          gr_featureval_destroy() to free this object when done.
  * @param pFace The font face to get feature values from
  * @param langname The language tag to get feature values for. If there is no such language or
  *                  langname is 0, the default feature values for the font are returned.
  *                  langname is right 0 padded and assumes lowercase. Thus the en langauge
  *                  would be 0x656E0000. Langname may also be space padded, thus 0x656E2020.
   }
(* Const before type ignored *)
function gr_face_featureval_for_lang(pFace:Pgr_face; langname:Tgr_uint32):Pgr_feature_val;cdecl;external;
{* Get feature reference for a given feature id from a face
  *
  * @return a feature reference corresponding to the given id. This data is part of the gr_face and
  *          will be freed when the face is destroyed.
  * @param pFace Font face to get information on.
  * @param featId    Feature id tag to get reference to.
   }
(* Const before type ignored *)
(* Const before type ignored *)
function gr_face_find_fref(pFace:Pgr_face; featId:Tgr_uint32):Pgr_feature_ref;cdecl;external;
{* Returns number of feature references in a face * }
(* Const before type ignored *)
function gr_face_n_fref(pFace:Pgr_face):Tgr_uint16;cdecl;external;
{* Returns feature reference at given index in face * }
(* Const before type ignored *)
(* Const before type ignored *)
function gr_face_fref(pFace:Pgr_face; i:Tgr_uint16):Pgr_feature_ref;cdecl;external;
{* Return number of languages the face knows about * }
(* Const before type ignored *)
function gr_face_n_languages(pFace:Pgr_face):word;cdecl;external;
{* Returns a language id corresponding to a language of given index in the face * }
(* Const before type ignored *)
function gr_face_lang_by_index(pFace:Pgr_face; i:Tgr_uint16):Tgr_uint32;cdecl;external;
{* Destroy the given face and free its memory * }
procedure gr_face_destroy(face:Pgr_face);cdecl;external;
{* Returns the number of glyphs in the face * }
(* Const before type ignored *)
function gr_face_n_glyphs(pFace:Pgr_face):word;cdecl;external;
{* Returns a faceinfo for the face and script * }
(* Const before type ignored *)
(* Const before type ignored *)
function gr_face_info(pFace:Pgr_face; script:Tgr_uint32):Pgr_faceinfo;cdecl;external;
{* Returns whether the font supports a given Unicode character
  *
  * @return true if the character is supported.
  * @param pFace    face to test within
  * @param usv      Unicode Scalar Value of character to test
  * @param script   Tag of script for selecting which set of pseudo glyphs to test. May be NULL.
   }
(* Const before type ignored *)
function gr_face_is_char_supported(pFace:Pgr_face; usv:Tgr_uint32; script:Tgr_uint32):longint;cdecl;external;
{$ifndef GRAPHITE2_NFILEFACE}
{* Create gr_face from a font file
  *
  * @return gr_face that accesses a font file directly. Returns NULL on failure.
  * @param filename Full path and filename to font file
  * @param faceOptions Bitfile from enum gr_face_options to control face options.
   }
(* Const before type ignored *)

function gr_make_file_face(filename:Pchar; faceOptions:dword):Pgr_face;cdecl;external;
{* @deprecated   Since 1.3.7. This function is now an alias for gr_make_file_face().
  *
  * Create gr_face from a font file, with subsegment caching support.
  *
  * @return gr_face that accesses a font file directly. Returns NULL on failure.
  * @param filename Full path and filename to font file
  * @param segCacheMaxSize Specifies how big to make the cache in segments.
  * @param faceOptions   Bitfield from enum gr_face_options to control face options.
   }
{GR2_DEPRECATED_API }(* Const before type ignored *)
function gr_make_file_face_with_seg_cache(filename:Pchar; segCacheMaxSize:dword; faceOptions:dword):Pgr_face;cdecl;external;
{$endif}
{ !GRAPHITE2_NFILEFACE }
{* Create a font from a face
  *
  * @return gr_font Call font_destroy to free this font
  * @param ppm Resolution of the font in pixels per em
  * @param face Face this font corresponds to. This must stay alive as long as the font is alive.
   }
(* Const before type ignored *)

function gr_make_font(ppm:single; face:Pgr_face):Pgr_font;cdecl;external;
{* query function to find the hinted advance of a glyph
  *
  * @param appFontHandle is the unique information passed to gr_make_font_with_advance()
  * @param glyphid is the glyph to retireve the hinted advance for.
  }
(* Const before type ignored *)
type

  Tgr_advance_fn = function (appFontHandle:pointer; glyphid:Tgr_uint16):single;cdecl;
{* struct housing function pointers to manage font hinted metrics for the
  * graphite engine.  }
{* size of the structure in bytes to allow for future extensibility  }
{* a pointer to a function to retrieve the hinted
          * advance width of a glyph which the font cannot
          * provide without client assistance.  This can be
          * NULL to signify no horizontal hinted metrics are necessary.  }
{* a pointer to a function to retrieve the hinted
          * advance height of a glyph which the font cannot
          * provide without client assistance.  This can be
          * NULL to signify no horizontal hinted metrics are necessary.  }
  Pgr_font_ops = ^Tgr_font_ops;
  Tgr_font_ops = record
      size : Tsize_t;cdecl;
      glyph_advance_x : Tgr_advance_fn;
      glyph_advance_y : Tgr_advance_fn;
    end;

{* Creates a font with hinted advance width query functions
  *
  * @return gr_font to be destroyed via font_destroy
  * @param ppm size of font in pixels per em
  * @param appFontHandle font specific information that must stay alive as long
  *        as the font does
  * @param font_ops pointer font specific callback structure for hinted metrics.
  *        Need only stay alive for the duration of the call.
  * @param face the face this font corresponds to. Must stay alive as long as
  *        the font does.
   }
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
